--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "AdventOfCode2023"
+name = "advent_of_code_2023"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 regex = "1.12.2"
+
+[dev-dependencies]
+criterion = { version = "0.7", features = ["html_reports"] }
+
+[[bench]]
+name = "day1"
+harness = false
