--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ criterion = { version = "0.7", features = ["html_reports"] }
 [[bench]]
 name = "day1"
 harness = false
+
+[[bench]]
+name = "day2"
+harness = false
